# X12Lib

./: .appveyor.yml  .editorconfig  .gitconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Directx12Test.sln  Directx12Test.vcxproj  Directx12Test.vcxproj.filters  README.md  Test1ConstantBuffers.vcxproj  Test1Dx11ConstantBuffers.cpp  Test1Dx11ConstantBuffers.vcxproj  Test1Dx11ConstantBuffers.vcxproj.filters  X12Lib.sln  X12Lib.vcxproj  X12Lib.vcxproj.filters  appveyor.yml  camera.cpp  camera.h  common.cpp  common.h  console.cpp  console.h  core.cpp  core.h  descriptorheap.h  dx12commandlist.cpp  dx12commandlist.h  dx12common.cpp  dx12common.h  dx12gpuprofiler.cpp  dx12gpuprofiler.h  dx12render.cpp  dx12shader.cpp  dx12texture.h  dx12uniformbuffer.cpp  dx12uniformbuffer.h  dx12vertexbuffer.cpp  (+25 more)
.github/workflows/: benchmark.yml
corerender/: icorerender.h  intrusiveptr.h
corerender/dx12/: descriptorheap.cpp  dx12buffer.cpp  dx12buffer.h  dx12common.cpp  dx12common.h  dx12context.cpp  dx12context.h  dx12descriptorheap.cpp  dx12descriptorheap.h  dx12memory.cpp  dx12memory.h  dx12render.cpp  dx12render.h  dx12shader.cpp  dx12shader.h  dx12structuredbuffer.cpp  dx12structuredbuffer.h  dx12texture.cpp  dx12texture.h  dx12uniformbuffer.cpp  dx12uniformbuffer.h  dx12uploadheap.cpp  dx12uploadheap.h  dx12vertexbuffer.cpp  dx12vertexbuffer.h  uploadheap.cpp  uploadheap.h
dev/bench/: data.js
docs/: constant buffer.md  project_structure.txt  todo.txt
dx11/: dx11.cpp  dx11.h  dx11gpuprofiler.cpp  dx11gpuprofiler.h  test1_dx11_constantbuffers.cpp
font/: 1.fnt  1_0.dds
include/engine/system/: common.h  console.h  core.h  filesystem.h  gpuprofiler.h  input.h  light.h  material.h  materialmanager.h  mesh.h  model.h  render.h  renderer.h  resource.h  resourcemanager.h  scenemanager.h  shader.h  texture.h
include/engine/x12/: icorerender.h  intrusiveptr.h
include/math/: vmath.h
resources/: Cube.mesh  scene.yaml
resources/font/: 1_0.dds  readme.txt
resources/materials/: chrome.mat  floor.mat  gold.mat  gold1.mat  mesh.yaml  mirror.mat  plastic.mat  rough_mirror.mat  rough_plastic.mat  teapot.mat  wall.mat  wall1.mat
resources/meshes/: Teapot.002.mesh
resources/shaders/: brdf.h  clear.hlsl  consts.h  copy.hlsl  cpp_hlsl_shared.h  gpuprofiler_graph.shader  mesh.hlsl  mesh.shader  test_mesh.hlsl  uav.hlsl  uav.shader
resources/shaders/raytracing/: Common.hlsl  Copy.hlsl  Global.hlsl  Hit.hlsl  Miss.hlsl  RayGen.hlsl  rt_accumulate.hlsl  rt_clear_hits.hlsl  rt_clear_rtinfo.hlsl  rt_common.h  rt_copy_hits.hlsl  rt_hit.hlsl  rt_miss.hlsl  rt_raygen.hlsl  rt_regroup_rays.hlsl  rt_resources.h
resources/sponza/: 0.mat  0.mesh  0.yaml  1.mat  1.mesh  10.mat  10.mesh  100.mesh  101.mesh  102.mesh  11.mat  11.mesh  12.mat  12.mesh  13.mat  13.mesh  14.mat  14.mesh  15.mat  15.mesh  16.mat  16.mesh  17.mat  17.mesh  18.mat  18.mesh  19.mat  19.mesh  2.mat  2.mesh  20.mat  20.mesh  21.mat  21.mesh  22.mat  22.mesh  23.mat  23.mesh  24.mat  24.mesh  (+91 more)
resources/textures/: LDR_RGBA_0.dds  blue_noise.dds
src/benchmarks/: Makefile
src/editor/: consolewidget.cpp  consolewidget.h  debugwidget.cpp  debugwidget.h  editor.pro  editor_common.cpp  editor_common.h  editorcore.cpp  editorcore.h  importthread.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mylineedit.cpp  parameterswidget.cpp  parameterswidget.h  projectwidget.cpp  projectwidget.h  renderwidget.cpp  renderwidget.h  scenewidget.cpp  scenewidget.h  selectmeshdialog.cpp  settings.cpp  settings.h  texturelineedit.cpp  texturelineedit.h  treemodel.cpp  treenode.cpp  treenode.h
src/editor/manipulators/: imanipulator.cpp  imanipulator.h  manipulatorrotator.cpp  manipulatorrotator.h  manipulatorscale.cpp  manipulatorscale.h  manipulatortranslator.cpp  manipulatortranslator.h
src/editor/propertieswidgets/: gameobjectpropertywidget.ui  modelpropertywidget.cpp  modelpropertywidget.h
src/engine/math/: vmath.cpp  vmath.h
src/engine/system/: camera.cpp  camera.h  common.cpp  common.h  console.cpp  console.h  core.cpp  core.h  filesystem.cpp  gameobject.cpp  gameobject.h  gpuprofiler.cpp  input.cpp  light.cpp  mainwindow.cpp  mainwindow.h  material.cpp  materialmanager.cpp  mesh.cpp  mesh.h  model.cpp  model.h  pch.h  raytracing_d3dx12.h  raytracing_utils.cpp  raytracing_utils.h  render.cpp  renderer.cpp  resource.cpp  resource.h  resourcemanager.cpp  resourcemanager.h  scenemanager.cpp  scenemanager.h  shader.cpp  texture.cpp  texture.h  yaml.inl
src/engine/video/: icorerender.cpp  icorerender.h
src/engine/x12/: icorerender.cpp
src/examples/: constantbuffers.cpp  constantbuffers_dx11.cpp  constantbuffers_shared.h  engine_main.cpp  gltfmeshexporter.cpp  raytracing.cpp  raytracing_utils.cpp  raytracing_utils.h  uavbarriers.cpp
src/system/: camera.cpp  common.cpp  common.h  console.h  core.cpp  core.h  filesystem.cpp  gpuprofiler.h  input.h  mainwindow.cpp  pch.h
src/tests/: tests_main.cpp
src/tests/bench/: Makefile  bench.cpp
src/tests/constant_buffers/: test1_dx11_constantbuffers.cpp  test1_dx12_constantbuffers.cpp
src/tests/uav_barriers/: test3_uav_barriers.cpp
src/video/: icorerender.cpp  icorerender.h
src/video/d3d11/: dx11gpuprofiler.cpp
src/video/d3d12/: dx12buffer.cpp  dx12buffer.h  dx12common.cpp  dx12common.h  dx12context.cpp  dx12context.h  dx12descriptorheap.cpp  dx12descriptorheap.h  dx12gpuprofiler.cpp  dx12gpuprofiler.h  dx12memory.cpp  dx12render.cpp  dx12render.h  dx12shader.cpp  dx12shader.h  dx12texture.cpp  dx12texture.h  dx12vertexbuffer.cpp  dx12vertexbuffer.h
src/video/vk/: vkcommon.cpp  vkcontext.cpp  vkcontext.h  vkrender.cpp  vkrender.h
test1constant_buffers/: Test1ConstantBuffers.vcxproj  Test1Dx11ConstantBuffers.vcxproj  Test1Dx11ConstantBuffers.vcxproj.filters  test1_dx11_constantbuffers.cpp  test1_dx12_constantbuffers.cpp  test1_shared.h
test2async_processing/: Dx12AsyncProcessing.vcxproj  Dx12AsyncProcessing.vcxproj.filters  main.cpp
test3_uav_barriers/: Test3_dx12_uav_barriers.vcxproj  Test3_dx12_uav_barriers.vcxproj.filters  test3_uav_barriers.cpp
(+68 files in other folders)
